[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["null"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all", "updater"] }
tokio = { version = "1", features = ["rt", "signal"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
walkdir = "2"
base64 = { version = "0.13.0" }
zip = "0.6.4"
unrar = "0.4.4"
sevenz-rust = "0.1.4"
lazy_static = "1.4.0"
hudsucker = { version = "0.18.0", features = ["rustls-client"] }
rcgen = { version = "0.10", features = ["x509-parser"] }
rustls-pemfile = "1.0"
sysproxy = "0.2"
open = "3"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
branch = "dev"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
